# jeopardy

./: .gitignore  .prettierrc.cjs  README.md  clean.ipynb  package-lock.json  package.json  pyproject.toml  renovate.json  tsconfig.json
.github/: CODE_OF_CONDUCT.md
.github/workflows/: lint.yml
app/: __main__.py  app.py  errors.py  questions.py  rooms.py  server.py  users.py  util.py  websocket.py
static/: answer.js  end.js  index.js  lobby.js  players.js  question-host.js  question-player.js  question.js  questions-host.js  questions-player.js  questions.js  start-round.js  styles.css  util.js  websocket.js
templates/: components.html  end.html  index.html  lobby.html  question.html  questions.html
