[tool.poetry]
name = "jeopardy"
version = "0.0.1"
description = ""
authors = ["cobaltt7"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.0"
pandas = "2.3.3"
flask = {extras = ["async"], version = "3.1.2"}
flask-socketio = "5.5.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "25.11.0", allow-prereleases = true}
ipykernel = "7.1.0"
notebook = "7.5.0"
pandas-stubs = "2.3.2.250926"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-magic-trailing-comma = true
preview = true
unstable = true
