[tool.poetry]
name = "jeopardy"
version = "0.0.1"
description = ""
authors = ["cobaltt7"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.0"
pandas = "3.0.2"
flask = {extras = ["async"], version = "3.1.3"}
flask-socketio = "5.5.1"

[tool.poetry.group.dev.dependencies]
black = "26.3.1"
ipykernel = "7.2.0"
notebook = "7.5.5"
pandas-stubs = "3.0.0.260204"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-magic-trailing-comma = true
preview = true
unstable = true
